syntax = "proto3";

package kessel.inventory.v1beta1;

import "google/api/annotations.proto";

import "kessel/inventory/v1beta1/k8s_policy.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta1";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta1";

message CreateK8sPolicyRequest {
  // The policy to create in Kessel Asset Inventory
  K8sPolicy k8s_policy = 1;
}

message CreateK8sPolicyResponse {
  // The policy created in Kessel Asset Inventory
  K8sPolicy k8s_policy = 1;
}

message UpdateK8sPolicyRequest {
  // The {resource} format
  // \"<reporter_data.reporter_type>:<reporter_data.local_resource_id>\".
  string resource = 1;
  // The Policy to update in Kessel Asset Inventory
  K8sPolicy k8s_policy = 2;
}

message UpdateK8sPolicyResponse {}

message DeleteK8sPolicyRequest {
  // The {resource} format
  // \"<reporter_data.reporter_type>:<reporter_data.local_resource_id>\".
  string resource = 1;
}

message DeleteK8sPolicyResponse {}

service KesselK8sPolicyService {
  rpc CreateK8sPolicy(CreateK8sPolicyRequest) returns (CreateK8sPolicyResponse) {
    option (google.api.http) = {
      post : "/api/inventory/v1beta1/k8s-policies"
      body : "*"
    };
  };

  rpc UpdateK8sPolicy(UpdateK8sPolicyRequest) returns (UpdateK8sPolicyResponse) {
    option (google.api.http) = {
      put : "/api/inventory/v1beta1/k8s-policies/{resource}"
      body : "*"
    };
  };

  rpc DeleteK8sPolicy(DeleteK8sPolicyRequest) returns (DeleteK8sPolicyResponse) {
    option (google.api.http) = {
      delete : "/api/inventory/v1beta1/k8s-policies/{resource}"
    };
  };
}
