syntax = "proto3";

package kessel.inventory.v1beta2;
import "buf/validate/validate.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta2";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta2";

message RepresentationMetadata {
  string local_resource_id = 1 [(buf.validate.field).string = {min_len: 1}];
  string api_href = 2 [(buf.validate.field).string = {min_len: 1}];
  optional string console_href = 3 ;
  optional string reporter_version = 4;
}

