syntax = "proto3";

package kessel.inventory.v1beta2;
import "google/protobuf/struct.proto";
import "kessel/inventory/v1beta2/representation_metadata.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/project-kessel/inventory-api/api/kessel/inventory/v1beta2";
option java_multiple_files = true;
option java_package = "org.project_kessel.api.inventory.v1beta2";

message ResourceRepresentations {
  RepresentationMetadata metadata = 1 [(buf.validate.field).required = true];
  optional google.protobuf.Struct common = 2 ;
  optional google.protobuf.Struct reporter = 3 ;
}

